[gd_scene load_steps=2 format=3 uid="uid://b5wmjp1psgsvr"]

[ext_resource type="Script" path="res://ui/components/fast_withdraw/fast_withdraw.gd" id="1_4itd0"]

[node name="FastWithdraw" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4itd0")

[node name="ButtonRequestInvoice" type="Button" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 79.0
offset_right = 470.0
offset_bottom = 114.0
text = "Request fast withdrawal test invoice"

[node name="LineEditMainchainAddress" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 425.0
offset_bottom = 43.0
placeholder_text = "Enter mainchain address"

[node name="LabelInvoice" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 135.0
offset_right = 58.0
offset_bottom = 158.0

[node name="ButtonInvoicePaid" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 298.0
offset_right = 126.0
offset_bottom = 333.0
text = "Invoice Paid"

[node name="LineEditTXID" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 259.0
offset_right = 620.0
offset_bottom = 290.0
placeholder_text = "Enter L2 payment txid"

[node name="LabelComplete" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 341.0
offset_right = 548.0
offset_bottom = 364.0

[node name="SpinBoxAmount" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 14.0
offset_right = 770.0
offset_bottom = 45.0
min_value = 1.0
value = 1.0
suffix = "BTC"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 17.0
offset_right = 606.0
offset_bottom = 40.0
text = "Amount to withdraw:
"

[node name="ButtonCopyAddress" type="Button" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 181.0
offset_right = 515.0
offset_bottom = 216.0
text = "Copy Address
"

[node name="CheckButtonLocalhost" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 865.0
offset_top = 4.0
offset_right = 1016.0
offset_bottom = 35.0
text = "Debug server"

[node name="LabelConnectionStatus" type="Label" parent="."]
layout_mode = 0
offset_left = 488.0
offset_top = 88.0
offset_right = 604.0
offset_bottom = 111.0
text = "Not Connected"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 51.0
offset_right = 198.0
offset_bottom = 72.0
text = "Sidechain to withdraw from:
"

[node name="ChainSelectionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 79.0
offset_right = 40.0
offset_bottom = 99.0
item_count = 3
selected = 0
popup/item_0/text = "Testchain"
popup/item_0/id = 0
popup/item_1/text = "Thunder"
popup/item_1/id = 1
popup/item_2/text = "ZSide"
popup/item_2/id = 2

[connection signal="pressed" from="ButtonRequestInvoice" to="." method="_on_button_request_invoice_pressed"]
[connection signal="pressed" from="ButtonRequestInvoice" to="." method="_on_button_test_pressed"]
[connection signal="pressed" from="ButtonInvoicePaid" to="." method="_on_button_invoice_paid_pressed"]
[connection signal="pressed" from="ButtonInvoicePaid" to="." method="_on_button_test_complete_pressed"]
[connection signal="pressed" from="ButtonCopyAddress" to="." method="_on_button_copy_address_pressed"]
[connection signal="item_selected" from="ChainSelectionButton" to="." method="_on_chain_selection_button_item_selected"]
